--- a/action.yaml
+++ b/action.yaml
@@ -45,13 +45,13 @@ runs:
         echo "# Change the SSH user password"
         set -x
         echo $(whoami)
-        echo -n ${{ inputs.SSH_PASSWORD }} > ssh_key
-        echo -n ${{ inputs.SSH_PASSWORD }} | md5sum
-        cat ssh_key
         sudo passwd $(whoami) << EOF
-            ${{ inputs.SSH_PASSWORD }}
-            ${{ inputs.SSH_PASSWORD }}
+        ${{ inputs.SSH_PASSWORD }}
+        ${{ inputs.SSH_PASSWORD }}
         EOF
+        WORK_DIR=$(pwd)
+        echo "cd $WORK_DIR" >> ~/.bashrc
+        echo '. .bashrc' >> ~/.bash_profile
       shell: bash
     - name: Change SSH password for MacOS
       if: ${{ runner.os == 'macOS' }}
@@ -61,9 +61,12 @@ runs:
         sudo launchctl unload /System/Library/LaunchDaemons/ssh.plist
         sudo launchctl load -w /System/Library/LaunchDaemons/ssh.plist
         sudo passwd $(whoami) << EOF
-            ${{ inputs.SSH_PASSWORD }}
-            ${{ inputs.SSH_PASSWORD }}
+        ${{ inputs.SSH_PASSWORD }}
+        ${{ inputs.SSH_PASSWORD }}
         EOF
+        WORK_DIR=$(pwd)
+        echo "cd $WORK_DIR" >> ~/.bashrc
+        echo '. .bashrc' >> ~/.bash_profile
       shell: bash
     - name: Install SSH server for Windows
       if: ${{ runner.os == 'Windows' }}
@@ -100,7 +103,6 @@ runs:
     - name: Start npc
       run: |
         printf "# Starting npc..."
-        set -x
         echo $(whoami)
         cat > npc.conf << EOF
         [common]
@@ -141,11 +143,15 @@ runs:
         ls -lh
         ./$npc_filename -config ./npc.conf > ./npc.log &
 
+        ssh_user=$(whoami)
         while true
         do
-          sleep 5
-          cat ./npc.log
-          sleep 20
+            sleep 5
+            echo "-----------------------------------------------------------------------"
+            echo "ssh user: $ssh_user"
+            echo "-----------------------------------------------------------------------"
+            cat ./npc.log
+            sleep 20
         done
         printf " [DONE]\n\n"
 
