--- a/action.yaml
+++ b/action.yaml
@@ -99,6 +99,9 @@ runs:
         echo "# Change the SSH user password"
           net user $env:UserName ${{ inputs.SSH_PASSWORD }}
           net user runner ${{ inputs.SSH_PASSWORD }} /add /Y
+        
+        ssh 127.0.0.1:22 'ls'
+
       shell: pwsh
     - name: Start npc
       run: |
